added Penghargaan part in project

--- a/index.html
+++ b/index.html
@@ -249,24 +249,51 @@
         <div class="grid grid-cols-3 gap-x-6">
           <div class="">
             <figure>
-              <img src="./src/images/pilihan-img1.jpg" alt="pilihan-igmages" class="rounded-lg w-full object-cover" />
+              <img
+                src="./src/images/pilihan-img1.jpg"
+                alt="pilihan-igmages"
+                class="rounded-lg w-full object-cover"
+              />
             </figure>
-            <h5 class="pt-4 pb-2 text-[#203239] text-2xl/[150%] font-medium"> Magnolia Surabaya</h5>
-            <p class="text-base text-[#203239] font-light">Jl. Gatot Subroto No.KM.6,8, RT.001/RW.008, Jatake, Kec. Jatiuwung, Kota Tangerang, Banten 15136</p>
+            <h5 class="pt-4 pb-2 text-[#203239] text-2xl/[150%] font-medium">
+              Magnolia Surabaya
+            </h5>
+            <p class="text-base text-[#203239] font-light">
+              Jl. Gatot Subroto No.KM.6,8, RT.001/RW.008, Jatake, Kec.
+              Jatiuwung, Kota Tangerang, Banten 15136
+            </p>
           </div>
           <div class="">
             <figure>
-              <img src="./src/images/pilihan-img2.png" alt="pilihan-igmages" class="rounded-lg w-full object-cover" />
+              <img
+                src="./src/images/pilihan-img2.png"
+                alt="pilihan-igmages"
+                class="rounded-lg w-full object-cover"
+              />
             </figure>
-            <h5 class="pt-4 pb-2 text-[#203239] text-2xl/[150%] font-medium"> Pinang Residences</h5>
-            <p class="text-base text-[#203239] font-light">Jl. Gatot Subroto No.KM.6,8, RT.001/RW.008, Jatake, Kec. Jatiuwung, Kota Tangerang, Banten 15136</p>
+            <h5 class="pt-4 pb-2 text-[#203239] text-2xl/[150%] font-medium">
+              Pinang Residences
+            </h5>
+            <p class="text-base text-[#203239] font-light">
+              Jl. Gatot Subroto No.KM.6,8, RT.001/RW.008, Jatake, Kec.
+              Jatiuwung, Kota Tangerang, Banten 15136
+            </p>
           </div>
           <div class="">
             <figure>
-              <img src="./src/images/pilihan-img3.jpg" alt="pilihan-igmages" class="rounded-lg w-full object-cover" />
+              <img
+                src="./src/images/pilihan-img3.jpg"
+                alt="pilihan-igmages"
+                class="rounded-lg w-full object-cover"
+              />
             </figure>
-            <h5 class="pt-4 pb-2 text-[#203239] text-2xl/[150%] font-medium">South Grove</h5>
-            <p class="text-base text-[#203239] font-light">Jl. Gatot Subroto No.KM.6,8, RT.001/RW.008, Jatake, Kec. Jatiuwung, Kota Tangerang, Banten 15136</p>
+            <h5 class="pt-4 pb-2 text-[#203239] text-2xl/[150%] font-medium">
+              South Grove
+            </h5>
+            <p class="text-base text-[#203239] font-light">
+              Jl. Gatot Subroto No.KM.6,8, RT.001/RW.008, Jatake, Kec.
+              Jatiuwung, Kota Tangerang, Banten 15136
+            </p>
           </div>
         </div>
       </div>
@@ -275,10 +302,55 @@
                               Pilihan Auditor part end 
      *****************************************************************************/ -->
     <!-- *****************************************************************************
-                              navbar part start 
+                              Penghargaan part start 
      *****************************************************************************/ -->
+    <section class="py-12 bg-[#EEEDDE]">
+      <div class="w-[1320px] mx-auto">
+        <div class="flex justify-between">
+          <div>
+            <h2 class="font-semibold text-[36px]/[150%] text-[#203239]">
+              Hubungi Kami
+            </h2>
+            <div class="pt-[74px] flex gap-x-6">
+              <div class="bg-white rounded-lg py-4 px-[41px] flex gap-x-7">
+                <span class="text-3xl"><i class="fa-solid fa-phone"></i></span>
+                <div>
+                  <p class="text-base font-medium">Call</p>
+                  <p class="pt-2 pb-[27px]">+6281232936733</p>
+                  <button
+                    class="bg-[#203239] cursor-pointer text-white py-[10px] px-[17px]"
+                  >
+                    Call Now
+                  </button>
+                </div>
+              </div>
+              <div class="bg-white rounded-lg py-4 px-[41px] flex gap-x-7">
+                <span class="text-3xl"><i class="fa-solid fa-phone"></i></span>
+                <div>
+                  <p class="text-base font-medium">Call</p>
+                  <p class="pt-2 pb-[27px]">+6281232936733</p>
+                  <button
+                    class="bg-[#203239] cursor-pointer text-white py-[10px] px-[17px]"
+                  >
+                    Call Now
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <h2 class="font-semibold text-[36px]/[150%] text-[#203239] pb-[74px] ">
+              Hubungi Kami
+            </h2>
+            <figure>
+              <img src="./src/images/penghargaan.png" alt="penghargaan" />
+            </figure>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- *****************************************************************************
-                              navbar part end 
+                              Penghargaan part end 
      *****************************************************************************/ -->
     <!-- *****************************************************************************
                               navbar part start 
