added footer part in project

--- a/index.html
+++ b/index.html
@@ -339,7 +339,9 @@
             </div>
           </div>
           <div>
-            <h2 class="font-semibold text-[36px]/[150%] text-[#203239] pb-[74px] ">
+            <h2
+              class="font-semibold text-[36px]/[150%] text-[#203239] pb-[74px]"
+            >
               Hubungi Kami
             </h2>
             <figure>
@@ -353,10 +355,43 @@
                               Penghargaan part end 
      *****************************************************************************/ -->
     <!-- *****************************************************************************
-                              navbar part start 
+                              footer part start 
      *****************************************************************************/ -->
+    <footer class="bg-[#203239] py-8">
+      <div class="w-[1320px] mx-auto">
+        <div class="flex justify-between">
+          <figure>
+            <img src="./src/images/footer-icon.png" alt="footericon" />
+          </figure>
+          <div>
+            <ul class="flex gap-x-[55px]">
+              <li>
+                <a href="#" class="text-white text-xl"
+                  ><i class="fa-brands fa-instagram"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#" class="text-white text-xl"
+                  ><i class="fa-brands fa-facebook-f"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#" class="text-white text-xl"
+                  ><i class="fa-brands fa-tumblr"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#" class="text-white text-xl"
+                  ><i class="fa-brands fa-linkedin-in"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
     <!-- *****************************************************************************
-                              navbar part end 
+                              footer part end 
      *****************************************************************************/ -->
   </body>
 </html>
