fixed navbar animation

--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
           <li>
             <a
               href="#"
-              class="text-base font-light text-[#203239] hover:font-semibold inline-block relative after:absolute after:content-[''] after:bottom-[3px] after:-left-[50%] after:w-[50%] after:h-[3px] after:bg-[#F6762E] hover:after:left-[50%] hover:after:-translate-x-1/2 py-2 overflow-hidden"
+              class="text-base font-light text-[#203239] hover:font-semibold inline-block relative after:absolute after:content-[''] after:bottom-[3px] after:-left-[50%] after:w-[50%] after:h-[3px] after:bg-[#F6762E] hover:after:left-[50%] hover:after:-translate-x-1/2 py-2 overflow-hidden transition duration-300 ease-in-out after:duration-300"
               >Home</a
             >
           </li>
           <li>
             <a
               href="#"
-              class="text-base font-light text-[#203239] hover:font-semibold inline-block relative after:absolute after:content-[''] after:bottom-[3px] after:-left-[50%] after:w-[50%] after:h-[3px] after:bg-[#F6762E] hover:after:left-[50%] hover:after:-translate-x-1/2 py-2 overflow-hidden"
+              class="text-base font-light text-[#203239] hover:font-semibold inline-block relative after:absolute after:content-[''] after:bottom-[3px] after:-left-[50%] after:w-[50%] after:h-[3px] after:bg-[#F6762E] hover:after:left-[50%] hover:after:-translate-x-1/2 py-2 overflow-hidden after:duration-300"
               >About</a
             >
           </li>
           <li>
             <a
               href="#"
-              class="text-base font-light text-[#203239] hover:font-semibold inline-block relative after:absolute after:content-[''] after:bottom-[3px] after:-left-[50%] after:w-[50%] after:h-[3px] after:bg-[#F6762E] hover:after:left-[50%] hover:after:-translate-x-1/2 py-2 overflow-hidden"
+              class="text-base font-light text-[#203239] hover:font-semibold inline-block relative after:absolute after:content-[''] after:bottom-[3px] after:-left-[50%] after:w-[50%] after:h-[3px] after:bg-[#F6762E] hover:after:left-[50%] hover:after:-translate-x-1/2 py-2 overflow-hidden after:duration-300"
               >Properties</a
             >
           </li>
           <li>
             <a
               href="#"
-              class="text-base font-light text-[#203239] hover:font-semibold inline-block relative after:absolute after:content-[''] after:bottom-[3px] after:-left-[50%] after:w-[50%] after:h-[3px] after:bg-[#F6762E] hover:after:left-[50%] hover:after:-translate-x-1/2 py-2 overflow-hidden"
+              class="text-base font-light text-[#203239] hover:font-semibold inline-block relative after:absolute after:content-[''] after:bottom-[3px] after:-left-[50%] after:w-[50%] after:h-[3px] after:bg-[#F6762E] hover:after:left-[50%] hover:after:-translate-x-1/2 py-2 overflow-hidden after:duration-300"
               >Contact</a
             >
           </li>
