fixed footer design issue

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
      *****************************************************************************/ -->
     <footer class="bg-[#203239] py-8">
       <div class="w-[1320px] mx-auto">
-        <div class="flex justify-between">
+        <div class="flex justify-between items-center">
           <figure>
             <img src="./src/images/footer-icon.png" alt="footericon" />
           </figure>
