fix: Tahapan Pembelian part design fixed

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             class="hover:shadow-xl border-1 border-transparent hover:border-[#d1d1d18c] p-5 rounded-lg relative"
           >
             <div
-              class="absolute top-[10px] left-0 w-[8px] h-[32px] bg-[#FF7527] rounded-full"
+              class="absolute top-[17px] left-0 w-[8px] h-[32px] bg-[#FF7527] rounded-full"
             ></div>
             <div class="flex justify-between">
               <p class="text-[#203239] font-medium text-base">Pilih Properti</p>
@@ -141,16 +141,15 @@
             class="hover:shadow-xl border-1 border-transparent hover:border-[#d1d1d18c] p-5 rounded-lg relative"
           >
             <div
-              class="absolute top-[10px] left-0 w-[8px] h-[32px] bg-[#FF7527] rounded-full"
+              class="absolute top-[17px] left-0 w-[8px] h-[32px] bg-[#FF7527] rounded-full"
             ></div>
             <div class="flex justify-between">
-              <p class="text-[#203239] font-medium text-base">Pilih Properti</p>
-              <p class="text-[#FF7527] font-medium text-base">01</p>
+              <p class="text-[#203239] font-medium text-base">Proses Booking</p>
+              <p class="text-[#FF7527] font-medium text-base">02</p>
             </div>
             <p class="text-[#2032398c] font-light text-base/[30px] pt-2 pb-12">
-              Cari properti yang diinginkan sesuai dengan kriteria anda dan
-              keluarga. Cara memilih properti yang bijak dapat anda baca lebih
-              lanjut di sini
+              Pembayaran dalam bentuk sejumlah uang sebagai komitmen memesan
+              unit properti tertentu.
             </p>
             <button
               class="text-[#203239] font-medium text-base flex gap-x-3 items-center cursor-pointer"
@@ -163,16 +162,17 @@
             class="hover:shadow-xl border-1 border-transparent hover:border-[#d1d1d18c] p-5 rounded-lg relative"
           >
             <div
-              class="absolute top-[10px] left-0 w-[8px] h-[32px] bg-[#FF7527] rounded-full"
+              class="absolute top-[17px] left-0 w-[8px] h-[32px] bg-[#FF7527] rounded-full"
             ></div>
             <div class="flex justify-between">
-              <p class="text-[#203239] font-medium text-base">Pilih Properti</p>
-              <p class="text-[#FF7527] font-medium text-base">01</p>
+              <p class="text-[#203239] font-medium text-base">
+                KPR dan Sertifikasi
+              </p>
+              <p class="text-[#FF7527] font-medium text-base">03</p>
             </div>
             <p class="text-[#2032398c] font-light text-base/[30px] pt-2 pb-12">
-              Cari properti yang diinginkan sesuai dengan kriteria anda dan
-              keluarga. Cara memilih properti yang bijak dapat anda baca lebih
-              lanjut di sini
+              Pembiayaan KPR untuk pembeli rumah dengan skema pembiayaan jika
+              diperlukan dan dilanjutkan proses sertifkasi HGB.
             </p>
             <button
               class="text-[#203239] font-medium text-base flex gap-x-3 items-center cursor-pointer"
